{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 10,
  "lineage": "security-audit-test",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wide_open",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "id": "sg-wide-open",
            "name": "wide-open-sg",
            "vpc_id": "vpc-123",
            "ingress": [
              {
                "from_port": 0,
                "to_port": 65535,
                "protocol": "tcp",
                "cidr_blocks": ["0.0.0.0/0"],
                "ipv6_cidr_blocks": ["::/0"]
              }
            ],
            "egress": [
              {
                "from_port": 0,
                "to_port": 0,
                "protocol": "-1",
                "cidr_blocks": ["0.0.0.0/0"]
              }
            ],
            "tags": {}
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "restricted",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "id": "sg-restricted",
            "name": "restricted-sg",
            "vpc_id": "vpc-123",
            "ingress": [
              {
                "from_port": 443,
                "to_port": 443,
                "protocol": "tcp",
                "cidr_blocks": ["10.0.0.0/8"]
              }
            ],
            "tags": {}
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "id": "i-public-vm",
            "instance_type": "t3.micro",
            "ami": "ami-12345678",
            "public_ip": "54.100.200.1",
            "associate_public_ip_address": true,
            "region": "us-east-1",
            "tags": {
              "Name": "public-vm"
            }
          }
        }
      ]
    }
  ]
}